# hubuum-client-rust

./: Cargo.toml  README.md
api_resource_derive/: Cargo.toml
api_resource_derive/src/: lib.rs
src/: endpoints.rs  errors.rs  lib.rs
src/client/: async.rs  mod.rs  sync.rs
src/resources/: class.rs  group.rs  mod.rs  namespace.rs  object.rs  user.rs
src/types/: auth.rs  baseurl.rs  filter.rs  mod.rs  params.rs
