[package]
name = "hubuum_client"
version = "0.1.0"
edition = "2021"

[dependencies]
api_resource_derive = { path = "./api_resource_derive" }
reqwest = { version = "0", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0", features = ["serde"] }
url = "2"
async-trait = "0"
serde_urlencoded = "0"
log = "0"
tabled = "0.20"
percent-encoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
yare = "3"
